--- a/frontend/src/app/components/memberlist/memberlist.component.html
+++ b/frontend/src/app/components/memberlist/memberlist.component.html
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-sm-12">
         <ul *ngIf="members.length > 0">
-            <li *ngFor="let member of members">{{ member.pseudo }}</li>
+            <li *ngFor="let member of members">{{ member.display }}</li>
         </ul>
         <p *ngIf="members.length == 0">No members found</p>
     </div>
