--- a/frontend/src/app/components/nav-menu/nav-menu.component.html
+++ b/frontend/src/app/components/nav-menu/nav-menu.component.html
@@ -18,8 +18,14 @@
                     <li class="nav-item" [routerLinkActive]="['link-active']">
                         <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
                     </li>
-                    <li class="nav-item" [routerLinkActive]='["link-active"]'>
+                    <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!currentUser">
+                        <a class="nav-link text-dark" [routerLink]='["/login"]'>Login</a>
+                    </li>
+                    <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="currentUser && isAdmin">
                         <a class="nav-link text-dark" [routerLink]='["/members"]'>Members</a>
+                    </li>
+                    <li class="nav-item" *ngIf="currentUser">
+                        <a class="nav-link text-dark" [routerLink]='[]' (click)='logout()'>Logout</a>
                     </li>
                 </ul>
             </div>
