--- a/frontend/src/app/components/nav-menu/nav-menu.component.html
+++ b/frontend/src/app/components/nav-menu/nav-menu.component.html
@@ -15,6 +15,9 @@
                     <li class="nav-item" [routerLinkActive]="['link-active']">
                         <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
                     </li>
+                    <li class="nav-item" [routerLinkActive]='["link-active"]'>
+                        <a class="nav-link text-dark" [routerLink]='["/counter-stateless"]'>Counter (Stateless)</a>
+                    </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
                         <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
                     </li>
