--- a/frontend/src/app/components/nav-menu/nav-menu.component.html
+++ b/frontend/src/app/components/nav-menu/nav-menu.component.html
@@ -21,6 +21,9 @@
                     <li class="nav-item" [routerLinkActive]="['link-active']">
                         <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
                     </li>
+                    <li class="nav-item" [routerLinkActive]="['link-active']">
+                        <a class="nav-link text-dark" [routerLink]="['/numbers']">Numbers</a>
+                    </li>
                     <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!currentUser">
                         <a class="nav-link text-dark" [routerLink]='["/login"]'>Login</a>
                     </li>
