--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,18 +1,41 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-
-/* Provide sufficient contrast against white background */
-
-a {
-    color: #0366d6;
+html,
+body {
+    height: 100%;
 }
 
-code {
-    color: #e01a76;
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+.center_div {
+    width: 100%;
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
+nav.center_div {
+    margin-bottom: 25px;
+}
+
+.field-error {
+    float: right;
+}
+
+.form {
+    margin: 0;
+    display: grid;
+    /* grid-row-gap: 10px; */
+}
+
+.header {
+    margin-bottom: 20px;
+}
+
+.footer {
+    margin-top: 20px;
+    display: inline-grid;
+    grid-template-columns: auto auto;
 }
