--- a/frontend/src/app/components/nav-menu/nav-menu.component.html
+++ b/frontend/src/app/components/nav-menu/nav-menu.component.html
@@ -24,6 +24,9 @@
                     <li class="nav-item" [routerLinkActive]="['link-active']">
                         <a class="nav-link text-dark" [routerLink]="['/numbers']">Numbers</a>
                     </li>
+                    <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="currentUser">
+                        <a class="nav-link text-dark" [routerLink]="['/friends']">Friends</a>
+                    </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="currentUser && isAdmin">
                         <a class="nav-link text-dark" [routerLink]="['/members']">Members</a>
                     </li>
